Showcase: Prevent minor coverage gap between responsive breakpoints causing unnecessarily cramped text and excess whitespace.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9520 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
@@ -920,7 +920,7 @@ a.wpsc-hero-learnmore {
 }
 
 /* Smaller devices */
-@media ( max-width: 340px ) {
+@media ( max-width: 350px ) {
 	.home .wpsc-recent > li {
 		padding-left: 8px;
 		padding-right: 8px;
